Fixing menu size and wrapping for mobile

--- a/styles/components/Gallery.module.scss
+++ b/styles/components/Gallery.module.scss
@@ -14,7 +14,7 @@
     height: 100%;
   }
 
-    @media (max-width: 455px) { // mobile
+    @media (max-width: 365px) { // mobile
       .gallery_filter_menu {
         width: 100% !important;
         border-bottom-left-radius: 0px !important;
@@ -59,13 +59,15 @@
         position: fixed; 
         top: 100px; 
         right: 0px;
-        min-height: 50px;
+        min-height: 40px;
         max-width: 100vw !important;
         border-bottom-left-radius: 7px;
         z-index: 1;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: right !important;
+        background-color: $dark !important;
         border-bottom: 2px solid $secondary;
         border-left: 2px solid $secondary;
       }
@@ -74,20 +76,20 @@
       }
 
       .gallery_filter_icon_container {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         background-color: $dark;
         color: $light;
       }
       .gallery_filter_icon_container_selected {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         background-color: $light !important;
         color: $dark !important;
       }
         .gallery_filter_icon {
-          width: 40px !important;
-          height: 40px !important;
+          width: 30px !important;
+          height: 30px !important;
           margin: 5px;
         }
     }
